Increases selectbox max width to avoid clipping

--- a/assets/css/calypsoify.css
+++ b/assets/css/calypsoify.css
@@ -336,6 +336,7 @@ input[type=radio]:checked:before {
 	height: 43px;
 	margin-top: 0px;
 	margin-bottom: 5px;
+	max-width: 240px;
 }
 .wp-admin select + .button,
 .wp-admin select + .button:hover,
